notebookbar: alignment fixes

--- a/loleaflet/css/notebookbar.css
+++ b/loleaflet/css/notebookbar.css
@@ -529,7 +529,10 @@ div[id*='Row'].notebookbar, div[id*='Column'].notebookbar, #SendToBack.notebookb
 
 /* References Tab */
 
-#table-ReferencesTab
+#table-References
+{
+	margin-top: 10px;
+}
 
 #InsertMultiIndex.notebookbar img,
 #table-Reference-Section-Reference #InsertFootnote.notebookbar img,
@@ -549,6 +552,10 @@ div[id*='Row'].notebookbar, div[id*='Column'].notebookbar, #SendToBack.notebookb
 /* Format Tab */
 
 /* Table Tab */
+
+#table-Table {
+	margin-top: 10px;
+}
 
 #table-Table-Section-Layout #InsertCaptionDialog.notebookbar img,
 #BorderDialog.notebookbar img,
@@ -581,6 +588,10 @@ div[id*='Row'].notebookbar, div[id*='Column'].notebookbar, #SendToBack.notebookb
 
 /* Review Tab */
 
+#table-Review {
+	margin-top: 10px;
+}
+
 #SpellingAndGrammarDialog.notebookbar img,
 #ThesaurusDialog.notebookbar img,
 #TrackChanges.notebookbar img,
@@ -601,6 +612,11 @@ div[id*='Row'].notebookbar, div[id*='Column'].notebookbar, #SendToBack.notebookb
 #table-Draw #table-box16 #table-first16.notebookbar,
 #table-DrawTab #table-GroupB74 #table-SectionBottom48.notebookbar {
 	display: none;
+}
+
+#table-Draw
+{
+	margin-top: 5px;
 }
 
 /* Calc */
@@ -642,6 +658,10 @@ div[id*='Row'].notebookbar, div[id*='Column'].notebookbar, #SendToBack.notebookb
 }
 
 /* Data Tab */
+
+#table-Data {
+	margin-top: 10px;
+}
 
 #table-DataTab #table-ViewMenu3.notebookbar {
 	display: none;
